5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4187/executions/1644_2704.log
== TEST (2019-04-11 16:42:44) 
-- CODE:
nota= float(input("nota do aluno"))

if(nota >= 6):
	nf= nota+(nota*10/100)
	
	print("s".upper())

else:
	print("n".upper())
-- OUTPUT:
N
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:42:50) 
-- CODE:
nota= float(input("nota do aluno:"))

if(nota >= 6):
	nf= nota+(nota*10/100)
	
	print("s".upper())

else:
	print("n".upper())
-- OUTPUT:
N
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 16:43:03) 
-- CODE:
nota= float(input("nota do aluno:"))

if(nota >= 6):
	nf= nota+(nota*10/100)
	
	print("s".upper())

else:
	print("n".upper())
-- EXECUTION TIME:
0.205675
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
N
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
S
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
N
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:43:10) 
-- CODE:
nota= float(input("nota do aluno:"))

if(nota >= 6):
	nf= nota+(nota*10/100)
	
	print("s".upper())

else:
	print("n".upper())
-- OUTPUT:
N
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:49:19) 
-- CODE:
nota= float(input("nota do aluno:"))
b= input("terá acrescimo de 1% ?:".upper())

if(b="S"):
	nf= nota+(nota*10/100)
	print(nf)
else(b="N"):
	nf=nota
-- ERROR:
File "XXXX", line 4
    if(b="S"):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:49:39) 
-- CODE:
nota= float(input("nota do aluno:"))
b= input("terá acrescimo de 1% ?:".upper())

if(b="S"):
	nf= nota+(nota*10/100)

-- ERROR:
File "XXXX", line 4
    if(b="S"):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:49:51) 
-- CODE:
nota= float(input("nota do aluno:"))
b= input("terá acrescimo de 1% ?:".upper())

if(b="s"):
	nf= nota+(nota*10/100)
-- ERROR:
File "XXXX", line 4
    if(b="s"):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:51:12) 
-- CODE:
nota= float(input("nota do aluno:"))
b= input("terá acrescimo de 1% ?:"("S"/"N")

-- ERROR:
File "XXXX", line 3
    
                                                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:51:19) 
-- CODE:
nota= float(input("nota do aluno:"))
b= input("terá acrescimo de 1% ?:"("S"/"N")
-- ERROR:
File "XXXX", line 3
    
                                                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:51:28) 
-- CODE:
nota= float(input("nota do aluno:"))
b= input("terá acrescimo de 1% ?:")
-- ERROR:
File "XXXX", line 3
    
                                                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:51:55) 
-- CODE:
nota= float(input("nota do aluno:"))
b= input("terá acrescimo de 1% ?:")

if(b="s")
-- ERROR:
File "XXXX", line 4
    if(b="s")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:52:00) 
-- CODE:
nota= float(input("nota do aluno:"))
b= input("terá acrescimo de 1% ?:")

if(b="s"):
-- ERROR:
File "XXXX", line 4
    if(b="s"):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:52:11) 
-- CODE:
nota= float(input("nota do aluno:"))
b= input("terá acrescimo de 1% ?:")

if(b= "s"):
-- ERROR:
File "XXXX", line 4
    if(b= "s"):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:52:19) 
-- CODE:
nota= float(input("nota do aluno:"))
b= input("terá acrescimo de 1% ?:")

if(b= s):
-- ERROR:
File "XXXX", line 4
    if(b= s):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:52:28) 
-- CODE:
nota= float(input("nota do aluno:"))
b= input("terá acrescimo de 1% ?:")

if(b=s):
-- ERROR:
File "XXXX", line 4
    if(b=s):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:52:40) 
-- CODE:
nota= float(input("nota do aluno:"))
b= input("terá acrescimo de 1% ?:")

if(b=s):
	print(nota)
-- ERROR:
File "XXXX", line 4
    if(b=s):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:53:52) 
-- CODE:
nota= float(input("nota do aluno:"))
b= input("terá acrescimo de 1% ?:")

if(b==S):
	print(nota)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(b==S):
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:55:19) 
-- CODE:
nota= float(input("nota do aluno:"))
b= input("terá acrescimo de 1% ?:")

if(b==S):
	nf= nota + (nota*10/100)
	print(nf)
	
else(b==N):
	nf=nota
	print(nf)
-- ERROR:
File "XXXX", line 8
    else(b==N):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:55:41) 
-- CODE:
nota= float(input("nota do aluno:"))
b= input("terá acrescimo de 1% ?:")

if(b==S):
	nf= nota + (nota*10/100)
	print(nf)
	
else:
	nf=nota
	print(nf)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(b==S):
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:09:36) 
-- CODE:
nota= float(input("nota do aluno:"))
b= input("terá acrescimo de 1% ?:")

if(b==S):
	nf= nota + (nota*10/100)
	print(nf)
	
else:
	nf=nota
	print(nf)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(b==S):
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:10:04) 
-- CODE:
nota= float(input("nota do aluno:"))
b= input("terá acrescimo de 1% ?:")

if(b=="S"):
	nf= nota + (nota*10/100)
	print(nf)
	
else:
	nf=nota
	print(nf)
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:10:46) 
-- CODE:
nota= float(input("nota do aluno:"))
b= input("terá acrescimo de 10% ?:")

if(b=="S"):
	nf= nota + (nota*10/100)
	print(nf)
	
else:
	nf=nota
	print(nf)
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:11:16) 
-- CODE:
nota= float(input("nota do aluno:"))
b= input("terá acrescimo de 10% ?:")

if(b=="S"):
	nf= nota + (nota*10/100)
	print(nf)
	
else:
	nf=nota
	print(nf)
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:11:32) 
-- CODE:
nota= float(input("nota do aluno:"))


if(b=="S"):
	nf= nota + (nota*10/100)
	print(nf)
	
else:
	nf=nota
	print(nf)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(b=="S"):
NameError: name 'b' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:11:50) 
-- CODE:
nota= float(input("nota do aluno:"))

	nf= nota + (nota*10/100)
	print(nf)
	
else:
	nf=nota
	print(nf)
-- ERROR:
File "XXXX", line 3
    nf= nota + (nota*10/100)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:12:00) 
-- CODE:
nota= float(input("nota do aluno:"))
nf= nota + (nota*10/100)
print(nf)
	
else:
	nf=nota
	print(nf)
-- ERROR:
File "XXXX", line 5
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:12:06) 
-- CODE:
nota= float(input("nota do aluno:"))
nf= nota + (nota*10/100)
print(nf)
	

-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 00:40:17) 
-- CODE:
nota = float(input("nota do aluno:"))
acrescimo = input("o aluno irá receber o acrescimo de 10%? (S/N)")
if (acrescimo.upper() == "N"):
	print(nota)
	
else(acrescimo == "S"):
	nf= nota + (nota*10/100)
	print(nf)

-- EXECUTION TIME:
0.156603
-- ERROR:
  File "/home/codebench/codes/1644/2704/main.py", line 6
    else(acrescimo == "S"):
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 00:40:22) 
-- CODE:
nota = float(input("nota do aluno:"))
acrescimo = input("o aluno irá receber o acrescimo de 10%? (S/N)")
if (acrescimo.upper() == "N"):
	print(nota)
	
else(acrescimo == "S"):
	nf= nota + (nota*10/100)
	print(nf)

-- EXECUTION TIME:
0.136314
-- ERROR:
  File "/home/codebench/codes/1644/2704/main.py", line 6
    else(acrescimo == "S"):
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:40:33) 
-- CODE:
nota = float(input("nota do aluno:"))
acrescimo = input("o aluno irá receber o acrescimo de 10%? (S/N)")
if (acrescimo.upper() == "N"):
	print(nota)
	
else(acrescimo == "S"):
	nf= nota + (nota*10/100)
	print(nf)

-- ERROR:
File "XXXX", line 6
    else(acrescimo == "S"):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 00:41:03) 
-- CODE:
nota = float(input("nota do aluno:"))
acrescimo = input("o aluno irá receber o acrescimo de 10%? (S/N)")
if (acrescimo.upper() == "N"):
	print(nota)
	
else(acrescimo == "S"):
	nf= nota + (nota*10/100)
	print(nf)

-- EXECUTION TIME:
0.238713
-- ERROR:
  File "/home/codebench/codes/1644/2704/main.py", line 6
    else(acrescimo == "S"):
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 00:41:26) 
-- CODE:
nota = float(input("nota do aluno:"))
acrescimo = input("o aluno irá receber o acrescimo de 10%? (S/N)")
if (acrescimo.upper() == "N"):
	print(nota)
	
else(acrescimo.upper() == "S"):
	nf= nota + (nota*10/100)
	print(nf)

-- EXECUTION TIME:
0.223988
-- ERROR:
  File "/home/codebench/codes/1644/2704/main.py", line 6
    else(acrescimo.upper() == "S"):
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:41:40) 
-- CODE:
nota = float(input("nota do aluno:"))
acrescimo = input("o aluno irá receber o acrescimo de 10%? (S/N)")
if (acrescimo.upper() == "N"):
	print(nota)
	
else(acrescimo.upper() == "S"):
	nf= nota + (nota*10/100)
	print(nf)

-- ERROR:
File "XXXX", line 6
    else(acrescimo.upper() == "S"):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 00:42:49) 
-- CODE:
nota = float(input("nota do aluno:"))
acrescimo = input("o aluno irá receber o acrescimo de 10%? (S/N)")
if (acrescimo.upper() == "N"):
	print(nota)
	
else(acrescimo.upper() == "S"):
	nf= nota + (nota*10/100)
	print(nf)

-- EXECUTION TIME:
0.174195
-- ERROR:
  File "/home/codebench/codes/1644/2704/main.py", line 6
    else(acrescimo.upper() == "S"):
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 00:49:09) 
-- CODE:
nota = float(input("nota do aluno:"))
acrescimo = input("o aluno irá receber o acrescimo de 10%? (S/N)")
if (acrescimo.upper() == "N"):
	print(nota)
	
else(acrescimo.upper() == "S"):
	nf= nota + (nota*10/100)
	print(nf)

-- EXECUTION TIME:
0.156348
-- ERROR:
  File "/home/codebench/codes/1644/2704/main.py", line 6
    else(acrescimo.upper() == "S"):
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:33:48) 
-- CODE:
nota = float(input("nota do aluno:"))
acrescimo = input("o aluno irá receber o acrescimo de 10%? (S/N)")
if (acrescimo.upper() == "N"):
	print(nota)
	
else:
	nf= nota + (nota*10/100)
	print(nf)

-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:34:10) 
-- CODE:
nota = float(input("nota do aluno:"))
acrescimo = input("o aluno irá receber o acrescimo de 10%? (S/N)")
if (acrescimo.upper() == "N"):
	print(nota)
	
else:
	nf= nota + (nota*10/100)
	print(nf)

-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:47:23) 
-- CODE:
nota = float(input("nota do aluno:"))
acrescimo = input("o aluno irá receber o acrescimo de 10%? (S/N)")
if (acrescimo.upper() == "N"):
	print(nota)
else:
	nf= nota + (nota*10/100)
	print(nf)

-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:47:35) 
-- CODE:
nota = float(input("nota do aluno:"))
acrescimo = input("o aluno irá receber o acrescimo de 10%? (S/N)")
if (acrescimo.upper() == "N"):
	print(nota)
else:
	nf= nota + (nota*10/100)
	print(nf)

-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:47:51) 
-- CODE:
nota = float(input("nota do aluno:"))
acrescimo = input("o aluno ira receber o acrescimo de 10%? (S/N)")
if (acrescimo.upper() == "N"):
	print(nota)
else:
	nf= nota + (nota*10/100)
	print(nf)

-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:48:10) 
-- CODE:
nota = float(input("nota do aluno:"))
acrescimo = input("o aluno ira receber o acrescimo de 10%? (S/N)")
if (acrescimo.upper() == "N"):
	print(nota)
else:
	nf= nota + (nota*10/100)
	print(nf)

-- EXECUTION TIME:
0.155727
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
